# simple_counter

./: .env.sample  .gitignore  Cargo.toml  README.md  package.json
app/: Cargo.toml
app/src/: cqrs.rs  lib.rs  shims.rs
app/src/cqrs/: aggregate.rs  commands.rs  consumers.rs  events.rs  mod.rs  queries.rs  read_models.rs
app/src/domain/: mod.rs  models.rs
data/: kountr.db
db/: Cargo.toml  README.md
db/src/: error.rs  event_store.rs  lib.rs  main.rs  repository.rs
db/src/entity/: counters.rs  events.rs  mod.rs
db/src/migrations/: m20230831_000001_create_events_table.rs  m20230901_155059_create_counters_table.rs
entity/: Cargo.toml
entity/src/: counters.rs  events.rs  lib.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs
service/: .gitignore  Cargo.toml
service/src/: mutation.rs  query.rs
src/: main.rs
templates/: dashboard.html
web/: Cargo.toml  package.json
web/src/: app.rs  handlers.rs  lib.rs  server.rs  views.rs
web/templates/: base.html  dashboard.html
web/templates/counters/: edit.html  item.html  list.html  new.html
web/templates/layouts/: base.html
web/templates/pages/: dashboard.html  home.html
web/templates/views/counters/: item.html  list.html  new.html
web/templates/views/pages/: home.html
