[package]
name = "kountr"
version = "0.1.0"
edition = "2021"
authors = ["Andrea Pavoni <andrea.pavoni@gmail.com>"]
publish = false
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
panic = "abort"

[workspace]
members = [".", "web", "app", "db"]

[dependencies]
tokio = { version = "1.32", features = ["full"] }
kountr-web = { path = "web" }
anyhow = "1.0"
