[package]
name = "kountr-app"
version = "0.1.0"
edition = "2021"
publish = false


[lib]
name = "kountr_app"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.4", features = ["serde", "v4"] }
kountr-db = { path = "../db" }
sea-orm = { version = "0.12", features = ["runtime-tokio-rustls", "sqlx-sqlite"]} 
tracing = "0.1"
