[package]
name = "kountr-db"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "kountr_db"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
thiserror = "1.0"
tracing = "0.1"
sea-orm-migration = { version = "0.12.0", features = [ "runtime-tokio-rustls", "sqlx-sqlite", ] }
sea-orm = { version = "0.12", features = ["runtime-tokio-rustls", "sqlx-sqlite"]} 
sea-query = "0.30"
