[package]
name = "entity"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "entity"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "0.12", features = ["runtime-tokio-rustls", "sqlx-sqlite"]} 
sea-query = "0.30"
serde = { version = "1.0", features = ["derive"] }


